<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/general">
        <ListPreference
            android:defaultValue="Linear"
            android:entries="@array/note_style_array"
            android:entryValues="@array/note_style_values"
            android:icon="@drawable/ic_style"
            android:key="note_style_key"
            app:useSimpleSummaryProvider="true"
            android:title="@string/chose_note_style" />
        <ListPreference
            android:defaultValue="hh:mm:ss - yyyy/MM/dd"
            app:useSimpleSummaryProvider="true"
            android:entries="@array/time_format_array"
            android:entryValues="@array/time_format_values"
            android:icon="@drawable/ic_time_format"
            android:key="time_format_key"
            android:title="@string/chose_time_format" />
<!--        <Preference-->
<!--            android:icon="@drawable/ic_remove_ads"-->
<!--            android:summary="@string/remove_ads_summary"-->
<!--            android:title="@string/remove_ads" />-->
    </PreferenceCategory>
    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/theme_settings">

        <ListPreference
            android:defaultValue="light"
            app:useSimpleSummaryProvider="true"
            android:entries="@array/chose_theme_array"
            android:entryValues="@array/chose_theme_values"
            android:icon="@drawable/ic_theme_style"
            android:key="theme_key"
            android:title="@string/chose_them" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/note_text_settings">

    </PreferenceCategory>
    <com.example.shoppinglist.utils.NumberPickerPreference
        android:key="title_size_key"
        android:title="@string/title_text_size"
        android:icon="@drawable/ic_text_size"
        android:dialogLayout="@layout/dialog_number_picker"
        android:summary="Choose a value"/>
    <com.example.shoppinglist.utils.NumberPickerPreference
        android:key="content_size_key"
        android:icon="@drawable/ic_text_size"
        android:title="@string/content_text_size"
        android:dialogLayout="@layout/dialog_number_picker"
        android:summary="Choose a value"/>

</PreferenceScreen>