<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:orderInCategory="4"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/notes"
        android:orderInCategory="2"
        android:title="@string/notes"
        android:icon="@drawable/ic_notes"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/shop_list"
        android:orderInCategory="1"
        android:title="@string/shop_list"
        android:icon="@drawable/ic_list"
        app:showAsAction="ifRoom"/>

<!--    <item-->
<!--        android:id="@+id/new_item"-->
<!--        android:orderInCategory="3"-->
<!--        android:title="@string/new_item"-->
<!--        android:icon="@drawable/ic_new"-->
<!--        app:showAsAction="ifRoom"/>-->

</menu>